--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "node-sass": "node-sass sass/main.scss css/style.css -w",
-        "node-sass--shop":"node-sass sass/main-market.scss css/shop.css -w"
+        "node-sass--shop":"node-sass sass/main-market.scss css/shop.css -w",
+        "node-sass--group":"node-sass sass/main-group.scss css/group.css -w"
     },
     "author": "shayan",
     "license": "ISC",
